--- a/src/styles/_layout.scss
+++ b/src/styles/_layout.scss
@@ -1,11 +1,13 @@
 body {
-    background-color: $base_dark_color;
-    color: $default-text-color;
+	background-color: $base_dark_color;
+	color: $default-text-color;
+	scroll-behavior: smooth;
+	text-rendering: optimizeSpeed;
 }
 html,
 body,
 #root {
-    height: 100%;
+	height: 100%;
 }
 
 // .animated-gradient {
@@ -42,172 +44,457 @@ body,
 // }
 
 .header-container {
-    width: 100%;
-    height: 80px;
-    background-color: $primary_dark_color;
-    .inner {
-        display: flex;
-        align-items: center;
-        justify-content: space-between;
-        padding: 0 24px;
-    }
-    header {
-        h1 {
-            @include textHide();
-        }
-        nav {
-            ul {
-                display: flex;
-                gap: 48px;
-                li {
-                    a {
-                        display: flex;
-                        position: relative;
-                        height: 80px;
-                        align-items: center;
-                        font-size: 18px;
-                        color: $default-text-color;
-                        text-transform: uppercase;
-                        @include transition(all, 0.2s);
-                        &:before {
-                            opacity: 0;
-                            display: block;
-                            content: "";
-                            width: 100%;
-                            height: 2px;
-                            background-color: $default-text-color;
-                            position: absolute;
-                            left: 0;
-                            bottom: 0;
-                            @include transition(opacity, 0.3s);
-                        }
-                    }
-                    &.on,
-                    &:hover {
-                        a {
-                            color: $hover-text-color;
-                            &:before {
-                                opacity: 1;
-                            }
-                        }
-                    }
-                    .gnb-cdp {
-                        background-repeat: no-repeat;
-                        background-position: left center;
-                        background-size: 24px 24px;
-                        padding-left: 30px;
-                        background-image: url("../../public/res/images/icons/gnb_icon_cdp.png");
-                    }
-                }
-            }
-        }
-    }
-    .user-control {
-        display: flex;
-        align-items: center;
-        .running-time,
-        .dropmenu-user-setting {
-            height: 80px;
-            display: flex;
-            align-items: center;
-            border-left: 1px solid rgba(255, 255, 255, 0.2);
-        }
-        .running-time {
-            padding: 0 24px;
-            span {
-                display: block;
-                position: relative;
-                font-size: 14px;
-                color: #fff;
-                padding: 0 0 0 38px;
-                &:before {
-                    @include psuedoBg();
-                    width: 30px;
-                    height: 30px;
-                    position: absolute;
-                    top: -7.5px;
-                    left: 0;
-                    background-image: url("../../public/res/images/icons/user-running-time.png");
-                }
-            }
-        }
-        .dropmenu-user-setting {
-            position: relative;
-            button {
-                position: relative;
-                width: 100%;
-                height: 100%;
-                font-size: 14px;
-                color: #fff;
-                padding: 0 0 0 24px;
-                span {
-                    display: inline-block;
-                    position: relative;
-                    padding: 0 26px 0 38px;
-                    &:before {
-                        @include psuedoBg();
-                        width: 30px;
-                        height: 30px;
-                        position: absolute;
-                        top: 50%;
-                        left: 0;
-                        transform: translateY(-50%);
-                        background-image: url("../../public/res/images/icons/user-setting-user.png");
-                    }
-                    &:after {
-                        @include psuedoBg();
-                        width: 18px;
-                        height: 18px;
-                        position: absolute;
-                        top: 50%;
-                        right: 0;
-                        transform: translateY(-50%);
-                        background-image: url("../../public/res/images/icons/user-setting-dropdown-arrow.png");
-                    }
-                }
-            }
-            .ui-dropmenu {
-                opacity: 0;
-                position: absolute;
-                top: 100%;
-                right: 0;
-                background-color: #333;
-                padding: 10px;
-                box-shadow: 1px 3px 2px 3px rgba(255, 255, 255, 0.1);
-            }
-        }
-    }
+	width: 100%;
+	min-width: 1080px;
+	height: 80px;
+	background-color: $primary_dark_color;
+	.inner {
+		display: flex;
+		align-items: center;
+		justify-content: space-between;
+		padding: 0 24px;
+	}
+	header {
+		h1 {
+			@include textHide();
+		}
+		nav {
+			ul {
+				display: flex;
+				gap: 48px;
+				li {
+					a {
+						display: flex;
+						position: relative;
+						height: 80px;
+						align-items: center;
+						font-size: 18px;
+						color: $default-text-color;
+						text-transform: uppercase;
+						@include transition(all, 0.2s);
+						&:before {
+							opacity: 0;
+							display: block;
+							content: '';
+							width: 100%;
+							height: 2px;
+							background-color: $default-text-color;
+							position: absolute;
+							left: 0;
+							bottom: 0;
+							@include transition(opacity, 0.3s);
+						}
+					}
+					&.on,
+					&:hover {
+						a {
+							color: $hover-text-color;
+							&:before {
+								opacity: 1;
+							}
+						}
+					}
+					.gnb-cdp {
+						background-repeat: no-repeat;
+						background-position: left center;
+						background-size: 24px 24px;
+						padding-left: 30px;
+						background-image: url('../../public/res/images/icons/gnb_icon_cdp.png');
+					}
+				}
+			}
+		}
+	}
+	.user-control {
+		display: flex;
+		align-items: center;
+		.running-time,
+		.dropmenu-user-setting {
+			height: 80px;
+			display: flex;
+			align-items: center;
+			border-left: 1px solid rgba(255, 255, 255, 0.2);
+		}
+		.running-time {
+			padding: 0 24px;
+			span {
+				display: block;
+				position: relative;
+				font-size: 14px;
+				color: #fff;
+				padding: 0 0 0 38px;
+				&:before {
+					@include psuedoBg();
+					width: 30px;
+					height: 30px;
+					position: absolute;
+					top: -7.5px;
+					left: 0;
+					background-image: url('../../public/res/images/icons/user-running-time.png');
+				}
+			}
+		}
+		.dropmenu-user-setting {
+			position: relative;
+			button {
+				position: relative;
+				width: 100%;
+				height: 100%;
+				font-size: 14px;
+				color: #fff;
+				padding: 0 0 0 24px;
+				span {
+					display: inline-block;
+					position: relative;
+					padding: 0 26px 0 38px;
+					&:before {
+						@include psuedoBg();
+						width: 30px;
+						height: 30px;
+						position: absolute;
+						top: 50%;
+						left: 0;
+						transform: translateY(-50%);
+						background-image: url('../../public/res/images/icons/user-setting-user.png');
+					}
+					&:after {
+						@include psuedoBg();
+						width: 18px;
+						height: 18px;
+						position: absolute;
+						top: 50%;
+						right: 0;
+						transform: translateY(-50%);
+						background-image: url('../../public/res/images/icons/user-setting-dropdown-arrow.png');
+					}
+				}
+			}
+			.ui-dropmenu {
+				opacity: 0;
+				position: absolute;
+				top: 100%;
+				right: 0;
+				background-color: #333;
+				padding: 10px;
+				box-shadow: 1px 3px 2px 3px rgba(255, 255, 255, 0.1);
+			}
+		}
+	}
 }
 
 .main-container {
-    height: calc(100% - 80px);
-    max-height: 1000px;
-    outline: 1px solid rgba(0, 240, 120, 0.8);
-    .inner {
-        height: 100%;
-        display: flex;
-        gap: 24px;
-        padding: 36px 24px 24px 24px;
-    }
-    .sidebar-section {
-        width: 292px;
-        height: 100%;
-        display: flex;
-        outline: 1px solid #fff;
-    }
-    .contents-section {
-        width: calc(100% - 268px);
-        outline: 1px solid #fff;
-    }
+	height: calc(100% - 80px);
+	max-height: 1000px;
+	.inner {
+		height: 100%;
+		display: flex;
+		gap: 24px;
+		padding: 36px 24px 24px 24px;
+	}
+	.sidebar-section {
+		width: 292px;
+		height: 100%;
+		display: flex;
+	}
+	.contents-section {
+		width: calc(100% - 268px);
+
+		.grid-vertical-two {
+			display: flex;
+			gap: 24px;
+			justify-content: space-between;
+			> .grid-left {
+				width: 1030px;
+				display: flex;
+				flex-direction: column;
+				gap: 24px;
+			}
+			> .grid-right {
+				width: calc(100% - 1054px);
+				display: flex;
+				flex-direction: column;
+				gap: 24px;
+			}
+		}
+		.grid-column-2 {
+			display: flex;
+			gap: 24px;
+			justify-content: space-between;
+			> div {
+				width: calc(50% - 12px);
+			}
+		}
+		.head {
+			display: flex;
+			justify-content: space-between;
+			align-items: center;
+			.title {
+				h1 {
+					font-size: 600;
+					color: #fff;
+					font-size: 28px;
+				}
+			}
+			.ui-components-box {
+				display: flex;
+				align-items: center;
+				gap: 8px;
+			}
+		}
+		.box-tbl {
+			@extend .box-container-style;
+			padding: 20px 20px 0 20px;
+			background-color: $card_bg_type01_color;
+			.head {
+				margin-bottom: 16px;
+				.title {
+					display: flex;
+					align-items: center;
+					h2 {
+						font-size: 14px;
+						color: #fff;
+						font-weight: 600;
+					}
+					.ui-tooltip {
+						position: relative;
+						margin-left: 4px;
+						.tooltip {
+							position: absolute;
+							top: 0;
+							right: 0;
+							opacity: 0;
+						}
+					}
+				}
+			}
+		}
+	}
 }
 
 .sidebar-section {
-    display: flex;
-    flex-direction: column;
-    gap: 24px;
-    .box-total-issue,
-    .box-search {
-        @extend .box-container-style;
-        background-color: $card_bg_type02_color;
-    }
+	display: flex;
+	flex-direction: column;
+	gap: 24px;
+	.box-total-issue,
+	.box-search {
+		@extend .box-container-style;
+		background-color: $card_bg_type02_color;
+	}
+	.head-title {
+		display: flex;
+		align-items: flex-start;
+		justify-content: space-between;
+		h1 {
+			font-size: 24px;
+			line-height: 32.4px;
+		}
+		.btn-refresh {
+			@include btnTextHide(24px, 24px);
+			background-image: url('../../public/res/images/icons/icon-refresh.png');
+		}
+	}
+	.box-total-issue {
+		border: 2px solid $primary_accent_color;
+		padding: 20px;
+		h2 {
+			font-size: 18px;
+			color: #fff;
+			line-height: 24.3px;
+			font-weight: 600;
+		}
+		.time {
+			font-size: 12px;
+			line-height: 17.4px;
+		}
+		strong {
+			display: block;
+			text-align: right;
+			font-weight: 700;
+			color: $primary_accent_color;
+			font-size: 32px;
+			line-height: 43.2px;
+		}
+	}
+	.box-summary-tabs {
+		.contents-service {
+			display: flex;
+			flex-direction: column;
+			.line {
+				display: flex;
+				justify-content: space-between;
+				align-items: center;
+				padding: 16px 0;
+				border-bottom: 1px solid $card_border_color;
+				&:nth-child(1) {
+					padding: 0 0 8px 0;
+					align-items: flex-start;
+					.num-summary {
+						strong {
+							color: $primary_accent_color;
+						}
+					}
+				}
+				&:nth-child(2) {
+					.num-summary {
+						strong {
+							color: $accent-unadress-color;
+						}
+					}
+				}
+				&:nth-child(3) {
+					.num-summary {
+						strong {
+							color: $accent-process-color;
+						}
+					}
+				}
+			}
+			h3 {
+				font-size: 16px;
+				color: #fff;
+				line-height: 23.2px;
+			}
+			.num-summary {
+				strong {
+					display: block;
+					font-weight: 600;
+					font-size: 18px;
+				}
+				.new {
+					display: block;
+					position: relative;
+					color: $accent-new-color;
+					font-weight: 600;
+					font-size: 14px;
+					padding-left: 33px;
+					margin: 4px 0 0 0;
+					&:before {
+						@include psuedoBg();
+						background-image: url('../../public/res/images/icons/icon_new.png');
+						width: 25px;
+						height: 12px;
+						position: absolute;
+						top: 0;
+						left: 0;
+					}
+				}
+			}
+			.ui-chart-container {
+				border-top: 1px solid $card_border_color;
+			}
+		}
+	}
+	.box-search {
+		padding: 20px;
+		h2 {
+			font-size: 18px;
+			color: #fff;
+			font-weight: 600;
+			margin-bottom: 8px;
+		}
+		.field-input-search {
+			width: 100%;
+			height: 44px;
+			background-color: #55565a;
+			padding: 10px 12px;
+			form {
+				display: flex;
+				align-items: center;
+				gap: 4px;
+				width: 100%;
+				i {
+					@include iconBg();
+					width: 24px;
+					height: 24px;
+					background-image: url('../../public/res/images/icons/icon-search.png');
+				}
+				input {
+					width: calc(100% - 24px);
+					height: 100%;
+					background-color: transparent;
+					border: none;
+					font-size: 14px;
+					color: #b8b8b8;
+				}
+				input::placeholder {
+					color: #b8b8b8;
+				}
+			}
+		}
+	}
+	.box-issus-inquiry {
+		h2 {
+			font-size: 14px;
+			color: #fff;
+			font-weight: 600;
+			line-height: 20.3px;
+			margin-bottom: 8px;
+		}
+		table {
+			width: 100%;
+			border-collapse: collapse;
+			th,
+			td {
+				border-bottom: 1px solid $table-body-border-color;
+				font-size: 10px;
+				padding: 8px 12px;
+			}
+			th {
+				background-color: #282828;
+				text-align: center;
+			}
+			td {
+				text-align: left;
+				border-left: 1px solid $table-body-border-color;
+			}
+		}
+	}
+	footer {
+		p {
+			font-size: 10px;
+			line-height: 14px;
+			color: #888888;
+			display: block;
+			position: relative;
+			padding-left: 32px;
+			&:before {
+				@include psuedoBg();
+				width: 24px;
+				height: 24px;
+				background-image: url('../../public/res/images/logo-lg.png');
+				position: absolute;
+				top: 50%;
+				left: 0;
+				transform: translateY(-50%);
+			}
+		}
+	}
+}
+
+.box-worldmap {
+	.head {
+		margin-bottom: 11px;
+	}
+	.ui-chart-container {
+		width: 100%;
+		height: 550px;
+		@extend .box-container-style;
+		background-color: $card_bg_type01_color;
+		background-image: url('../../public/res/images/chart/chart-bg-earth.png');
+		background-position: center bottom;
+		background-repeat: no-repeat;
+		background-size: 100% 100%;
+	}
+}
+
+.box-appIssues,
+.box-playbackIssues {
+	height: 324px;
+}
+.box-imageIssues {
+	height: 596px;
+}
+
+.box-secheduleIssues {
+	height: 324px;
 }
