--- a/src/styles/_reset.scss
+++ b/src/styles/_reset.scss
@@ -1,24 +1,24 @@
 @charset "utf-8";
 
 * {
-    font-display: swap;
+	font-display: swap;
 }
 *:not(input) {
-    font-family: "LG Smart";
+	font-family: 'LG Smart';
 }
 
 /* base rules */
 *,
 *::before,
 *::after {
-    box-sizing: border-box;
-    -webkit-box-sizing: border-box;
+	box-sizing: border-box;
+	-webkit-box-sizing: border-box;
 }
 html {
-    -webkit-text-size-adjust: 100%;
-    -ms-text-size-adjust: 100%;
-    width: 100%;
-    touch-action: manipulation;
+	-webkit-text-size-adjust: 100%;
+	-ms-text-size-adjust: 100%;
+	width: 100%;
+	touch-action: manipulation;
 }
 body,
 h1,
@@ -30,63 +30,80 @@ figure,
 blockquote,
 dl,
 dd {
-    margin: 0;
+	margin: 0;
 }
 body {
-    scroll-behavior: smooth;
-    text-rendering: optimizeSpeed;
+	scroll-behavior: smooth;
+	text-rendering: optimizeSpeed;
+}
+h1,
+h2,
+h3,
+h4 {
+	font-weight: normal;
 }
 ul,
 ol {
-    margin: 0;
-    padding: 0;
-    list-style: none;
+	margin: 0;
+	padding: 0;
+	list-style: none;
 }
 a {
-    text-decoration: none;
-    color: inherit;
-    cursor: pointer;
+	text-decoration: none;
+	color: inherit;
+	cursor: pointer;
 }
 input,
 button,
 textarea,
 select {
-    font: inherit;
+	font: inherit;
 }
 :not(input) {
-    -webkit-touch-callout: none;
-    -webkit-user-select: none;
-    user-select: none;
-    -webkit-tap-highlight-color: transparent !important;
+	-webkit-touch-callout: none;
+	-webkit-user-select: none;
+	user-select: none;
+	-webkit-tap-highlight-color: transparent !important;
 }
 textarea {
-    -webkit-user-select: auto;
-    user-select: auto;
+	-webkit-user-select: auto;
+	user-select: auto;
 }
 :focus {
-    outline: 0;
+	outline: 0;
 }
 table {
-    border-collapse: collapse;
-    border-spacing: 0;
+	border-collapse: collapse;
+	border-spacing: 0;
 }
 th,
 td {
-    padding: 0;
+	padding: 0;
 }
 fieldset,
 img {
-    border: 0;
+	border: 0;
 }
 button {
-    background-color: transparent;
-    outline: none;
-    border: none;
-    cursor: pointer;
-    padding: 0;
+	background-color: transparent;
+	outline: none;
+	border: none;
+	cursor: pointer;
+	padding: 0;
 }
 
 .inner {
-    width: 1920px;
-    margin: 0 auto;
+	width: 1920px;
+	margin: 0 auto;
+}
+
+*::-webkit-scrollbar {
+	width: 4px;
+}
+*::-webkit-scrollbar-thumb {
+	background-color: rgba(255, 255, 255, 0.2);
+	border-radius: 99px;
+}
+*::-webkit-scrollbar-track {
+	background-color: transparent;
 }
