--- a/src/styles/_layout.scss
+++ b/src/styles/_layout.scss
@@ -274,7 +274,6 @@ body,
 .sidebar-section {
 	display: flex;
 	flex-direction: column;
-	gap: 24px;
 	.box-total-issue,
 	.box-search {
 		@extend .box-container-style;
@@ -284,6 +283,7 @@ body,
 		display: flex;
 		align-items: flex-start;
 		justify-content: space-between;
+		margin-bottom: 8px;
 		h1 {
 			font-size: 24px;
 			line-height: 32.4px;
@@ -294,8 +294,10 @@ body,
 		}
 	}
 	.box-total-issue {
+		height: 108px;
 		border: 2px solid $primary_accent_color;
-		padding: 20px;
+		padding: 20px 20px 0 20px;
+		margin-bottom: 20px;
 		h2 {
 			font-size: 18px;
 			color: #fff;
@@ -316,6 +318,7 @@ body,
 		}
 	}
 	.box-summary-tabs {
+		margin-bottom: 20px;
 		.contents-service {
 			display: flex;
 			flex-direction: column;
@@ -324,10 +327,11 @@ body,
 				justify-content: space-between;
 				align-items: center;
 				padding: 16px 0;
-				border-bottom: 1px solid $card_border_color;
+				border-top: 1px solid $card_border_color;
 				&:nth-child(1) {
 					padding: 0 0 8px 0;
 					align-items: flex-start;
+					border-top: none;
 					.num-summary {
 						strong {
 							color: $primary_accent_color;
@@ -381,11 +385,25 @@ body,
 			}
 			.ui-chart-container {
 				border-top: 1px solid $card_border_color;
+				h3 {
+					font-size: 18px;
+					color: #fff;
+					font-weight: 600;
+					span {
+						display: block;
+						font-size: 14px;
+					}
+				}
+				.chart-wrap {
+					width: 258px;
+					height: 95px;
+				}
 			}
 		}
 	}
 	.box-search {
 		padding: 20px;
+		margin-bottom: 20px;
 		h2 {
 			font-size: 18px;
 			color: #fff;
@@ -422,7 +440,8 @@ body,
 			}
 		}
 	}
-	.box-issus-inquiry {
+	.box-issues-inquiry {
+		margin-bottom: 20px;
 		h2 {
 			font-size: 14px;
 			color: #fff;
