--- a/src/styles/_components.scss
+++ b/src/styles/_components.scss
@@ -22,12 +22,23 @@
 			font-size: 18px;
 			text-align: center;
 			color: $disabled-text-color;
+			position: relative;
 			&.on {
 				border-radius: 10px 10px 0 0;
 				background-color: $card_bg_type02_color;
 				border: 1px solid #535353;
 				border-bottom: none;
 				color: #fff;
+				&:before {
+					display: block;
+					content: '';
+					width: 100%;
+					height: 5px;
+					background-color: $card_bg_type02_color;
+					position: absolute;
+					left: 0;
+					bottom: -1px;
+				}
 			}
 		}
 	}
