--- a/src/styles/_components.scss
+++ b/src/styles/_components.scss
@@ -88,52 +88,52 @@
 }
 
 .ui-table-default {
-	height: calc(100% - 32px);
-	overflow: hidden;
-	overflow-y: auto;
-	-webkit-overflow-scrolling: touch;
-	table {
-		width: 100%;
-		position: relative;
-		th,
-		td {
-			text-align: center;
-			vertical-align: middle;
-			padding: 8px 4px;
-		}
-		thead {
-			border-bottom: 1px solid #fff;
-			tr {
-				background-color: $table-head-bg-color;
-				border-bottom: 1px solid $table-head-border-color;
-				position: sticky;
-				top: 0;
-				z-index: 10;
-				border-bottom: 1px solid #fff;
-			}
-			th {
-				font-size: 11px;
-				color: $table-head-text-color;
-				border-bottom: 1px solid #fff;
-			}
-		}
-		tbody {
-			td {
-				font-size: 12px;
-				color: $table-body-text-color;
-				background-color: $table-body-bg-color;
-				border-bottom: 1px solid $table-body-border-color;
-				@include transition(all, 0.2s);
-			}
-			tr {
-				&:hover {
-					td {
-						background-color: $table-body-hover-bg-color;
-					}
-				}
-			}
-		}
-	}
+	// height: calc(100% - 32px);
+	// overflow: hidden;
+	// overflow-y: auto;
+	// -webkit-overflow-scrolling: touch;
+	// table {
+	// 	width: 100%;
+	// 	position: relative;
+	// 	th,
+	// 	td {
+	// 		text-align: center;
+	// 		vertical-align: middle;
+	// 		padding: 8px 4px;
+	// 	}
+	// 	thead {
+	// 		border-bottom: 1px solid #fff;
+	// 		tr {
+	// 			background-color: $table-head-bg-color;
+	// 			border-bottom: 1px solid $table-head-border-color;
+	// 			position: sticky;
+	// 			top: 0;
+	// 			z-index: 10;
+	// 			border-bottom: 1px solid #fff;
+	// 		}
+	// 		th {
+	// 			font-size: 11px;
+	// 			color: $table-head-text-color;
+	// 			border-bottom: 1px solid #fff;
+	// 		}
+	// 	}
+	// 	tbody {
+	// 		td {
+	// 			font-size: 12px;
+	// 			color: $table-body-text-color;
+	// 			background-color: $table-body-bg-color;
+	// 			border-bottom: 1px solid $table-body-border-color;
+	// 			@include transition(all, 0.2s);
+	// 		}
+	// 		tr {
+	// 			&:hover {
+	// 				td {
+	// 					background-color: $table-body-hover-bg-color;
+	// 				}
+	// 			}
+	// 		}
+	// 	}
+	// }
 	.title {
 		@include lineClamp(1);
 		max-width: 90%;
