fix: 도넛 차트 수정

--- a/src/styles/_components.scss
+++ b/src/styles/_components.scss
@@ -139,3 +139,33 @@
 		max-width: 90%;
 	}
 }
+
+.chart-doughnut-legend {
+	position: absolute;
+	top: 20px;
+	right: 20px;
+	z-index: 10;
+	ul {
+		display: flex;
+		align-items: center;
+		gap: 20px;
+		li {
+			display: flex;
+			align-items: center;
+			gap: 6px;
+			i {
+				width: 16px;
+				height: 16px;
+				border-radius: 4px;
+				background-color: #ddd;
+			}
+			span {
+				font-size: 14px;
+				color: #fff;
+			}
+		}
+	}
+}
+
+.chart-type-donut {
+}
