--- a/src/styles/_layout.scss
+++ b/src/styles/_layout.scss
@@ -337,7 +337,7 @@ body,
 	}
 	.contents-section-container {
 		display: flex;
-		padding: 36px 0 24px 0;
+		padding: 36px 24px 24px 24px;
 		gap: 24px;
 		.sidebar-section {
 			width: 292px;
@@ -357,7 +357,7 @@ body,
 					gap: 24px;
 				}
 				> .grid-right {
-					width: calc(100% - 1030px);
+					width: calc(100% - 1030px - 24px);
 					display: flex;
 					flex-direction: column;
 					gap: 24px;
@@ -605,15 +605,18 @@ body,
 		table {
 			width: 100%;
 			border-collapse: collapse;
+			border-top: 1px solid $table-body-border-color;
 			th,
 			td {
 				border-bottom: 1px solid $table-body-border-color;
 				font-size: 10px;
-				padding: 8px 12px;
+				padding: 3px 12px;
+				line-height: 14.5px;
 			}
 			th {
 				background-color: #282828;
 				text-align: center;
+				width: 65px;
 			}
 			td {
 				text-align: left;
