--- a/src/styles/_layout.scss
+++ b/src/styles/_layout.scss
@@ -384,6 +384,8 @@ body,
 				display: flex;
 				justify-content: space-between;
 				align-items: center;
+				position: relative;
+				z-index: 50;
 				.title {
 					h1 {
 						font-size: 600;
