--- a/src/styles/_components.scss
+++ b/src/styles/_components.scss
@@ -40,6 +40,13 @@
 					bottom: -1px;
 				}
 			}
+			&:last-child.on:before {
+				height: 10px;
+				bottom: -10px;
+				right: -1px;
+				left: auto;
+				border-right: 1px solid #535353;
+			}
 		}
 	}
 	.ui-tab-contents {
