fix: 테이블내 타이틀 영역 추가 & 주소 변경

--- a/src/styles/_abstracts.scss
+++ b/src/styles/_abstracts.scss
@@ -78,3 +78,8 @@ $table-body-hover-bg-color: rgba(255, 255, 255, 0.05);
 	border: 1px solid $card_border_color;
 	border-radius: 10px;
 }
+
+.box-container-style-inside {
+	background-color: #282828;
+	border-radius: 16px;
+}
