--- a/src/styles/_layout.scss
+++ b/src/styles/_layout.scss
@@ -380,12 +380,28 @@ body,
 					width: calc(50% - 12px);
 				}
 			}
+			.grid-column-3 {
+				display: flex;
+				align-items: flex-start;
+				justify-content: space-between;
+			}
+			.grid-row-2 {
+				display: flex;
+				flex-direction: column;
+				gap: 32px;
+				padding: 20px;
+				@extend .box-container-style;
+			}
+			.grid-single-row {
+				width: 100%;
+			}
 			.head {
 				display: flex;
 				justify-content: space-between;
 				align-items: center;
 				position: relative;
 				z-index: 50;
+				margin-bottom: 11px;
 				.title {
 					h1 {
 						font-size: 600;
@@ -659,7 +675,7 @@ body,
 
 .box-worldmap {
 	.head {
-		margin-bottom: 11px;
+		margin-bottom: 11px !important;
 	}
 	.ui-chart-container {
 		width: 100%;
@@ -728,4 +744,56 @@ body,
 
 .box-secheduleIssues {
 	height: 324px;
+}
+
+.box-channel-dataflow {
+	.head {
+		margin-bottom: 11px;
+	}
+	.ui-chart-container {
+		width: 100%;
+		height: 620px;
+
+		background-color: $card_bg_type01_color;
+	}
+}
+
+.box-cmpIssues,
+.box-deviceIssues {
+	height: 254px;
+}
+.box-cpIssues {
+	height: 100%;
+}
+.box-statisIssue {
+	width: 100%;
+	height: 404px;
+}
+.box-value,
+.box-rateChange,
+.box-country {
+	@extend .box-container-style-inside;
+	padding: 20px;
+	.head {
+		.title {
+			h2 {
+				font-size: 18px;
+				color: #fff;
+				line-height: 24.3px;
+				font-weight: 600;
+			}
+		}
+	}
+	.ui-chart-container {
+		height: 342px;
+	}
+}
+.box-value {
+	width: 570px;
+}
+.box-rateChange {
+	width: 570px;
+}
+.box-country {
+	width: 328px;
 }
