--- a/src/styles/_layout.scss
+++ b/src/styles/_layout.scss
@@ -10,6 +10,8 @@ body,
 	height: 100%;
 }
 
+canvas { height: 100 !important }
+
 // .animated-gradient {
 //     background: linear-gradient(
 //         to right,
@@ -797,3 +799,4 @@ body,
 .box-country {
 	width: 328px;
 }
+
