--- a/src/styles/_components.scss
+++ b/src/styles/_components.scss
@@ -64,6 +64,7 @@
 }
 
 .ui-tab-type02 {
+	height: 100%;
 	.ui-tab-menu,
 	.ui-tab-contents {
 		width: 100%;
@@ -75,7 +76,6 @@
 			margin-bottom: 16px;
 			display: flex;
 			align-items: center;
-			opacity: 0.6;
 			position: relative;
 			margin-left: 8px;
 			cursor: pointer;
@@ -87,6 +87,7 @@
 				line-height: 24.3px;
 				color: #6d6d6d;
 				font-weight: 600;
+				opacity: 0.6;
 			}
 			&:first-child {
 				margin-left: 0;
@@ -102,9 +103,13 @@
 				color: #fff;
 				font-weight: 600;
 				padding-left: 9px;
+				opacity: 0.6;
 			}
 			&.on {
-				opacity: 1;
+				&:before,
+				h2 {
+					opacity: 1;
+				}
 			}
 		}
 	}
@@ -221,6 +226,7 @@
 	margin-left: 4px;
 	z-index: 55;
 	i {
+		cursor: pointer;
 		@include btnTextHide(16px, 16px);
 		background-image: url('../../public/res/images/icons/icon-tooltip.png');
 	}
